argocd/apps/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-app-nginx-ingress
  namespace: nginx
  annotations:
    # This annotation tells cert-manager to get a certificate for this Ingress
    cert-manager.io/cluster-issuer: "letsencrypt-prod-http"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - test.nginx.marcello-faria.com
      secretName: test-nginx-tls-secret
  rules:
  - host: "test.nginx.marcello-faria.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
